atualizando modulos